frame/election-provider-support/solution-type/tests/ui/fail/wrong_attribute.stderr
error: compact solution can accept only #[compact]
 --> $DIR/wrong_attribute.rs:4:2
  |
4 |     #[pages(1)] pub struct TestSolution::<
  |     ^^^^^^^^^^^
